fix: remove custom scrollbar styles and adjust modal overflow properties

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,38 +7,9 @@ html {
   width: 100%;
   max-width: 100%;
 }
-html::-webkit-scrollbar {
-  width: 10px;
-  background: transparent;
-}
-html::-webkit-scrollbar-thumb {
-  background: rgba(0, 0, 0, 0.44);
-  border-radius: 10px;
-  border: 2px solid transparent;
-  background-clip: padding-box;
-}
-html::-webkit-scrollbar-button {
-  width: 0;
-  height: 0;
-  display: none;
-}
-html::-webkit-scrollbar-track {
-  background: transparent;
-}
-html::-webkit-scrollbar-thumb:hover {
-  background: rgba(0, 0, 0, 0.55);
-  border: 2px solid transparent;
-  background-clip: padding-box;
-}
-html::-webkit-scrollbar-thumb:active {
-  background: rgba(0, 0, 0, 0.66);
-  border: 2px solid transparent;
-  background-clip: padding-box;
-}
 
 body {
   color: #444444;
-  scrollbar-gutter: auto;
 }
 
 .clearfix {
@@ -123,6 +94,7 @@ button {
   background: rgba(11, 11, 11, 0.8);
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
+  overflow: hidden;
 }
 .popup_login .popup_content {
   position: absolute;
