--- a/assets/sass/base/_index.scss
+++ b/assets/sass/base/_index.scss
@@ -3,45 +3,10 @@ html {
   display: block;
   width: 100%;
   max-width: 100%;
-
-  &::-webkit-scrollbar {
-    width: 10px;
-    background: transparent;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background: rgba(0, 0, 0, 0.44);
-    border-radius: 10px;
-    border: 2px solid transparent;
-    background-clip: padding-box;
-  }
-
-  &::-webkit-scrollbar-button {
-    width: 0;
-    height: 0;
-    display: none;
-  }
-
-  &::-webkit-scrollbar-track {
-    background: transparent;
-  }
-
-  &::-webkit-scrollbar-thumb:hover {
-    background: rgba(0, 0, 0, 0.55);
-    border: 2px solid transparent;
-    background-clip: padding-box;
-  }
-
-  &::-webkit-scrollbar-thumb:active {
-    background: rgba(0, 0, 0, 0.66);
-    border: 2px solid transparent;
-    background-clip: padding-box;
-  }
 }
 
 body {
   color: $primary-6;
-  scrollbar-gutter: auto;
 }
 
 .clearfix {
