--- a/assets/sass/components/_modal.scss
+++ b/assets/sass/components/_modal.scss
@@ -9,6 +9,7 @@
   overflow: auto;
   background: rgba(11, 11, 11, 0.8);
   backdrop-filter: blur(5px);
+  overflow: hidden;
 
   .popup_content {
     position: absolute;
